--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>mail-reader</description>
 	<properties>
 		<java.version>17</java.version>
+		<minio.version>8.5.2</minio.version>
+		<jsoup.version>1.16.1</jsoup.version>
 	</properties>
 	<dependencies>
 
@@ -33,7 +35,7 @@
 		<dependency>
 			<groupId>io.minio</groupId>
 			<artifactId>minio</artifactId>
-			<version>8.5.2</version>
+			<version>${minio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -44,7 +46,7 @@
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.16.1</version>
+			<version>${jsoup.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
